chore: add test commit

--- a/content/articles/1.get-started.md
+++ b/content/articles/1.get-started.md
@@ -12,7 +12,7 @@ layout: article
 
 Creating a blog with Alpine is a command away, as well as deploying to many platforms.
 
-## Create a blog
+## Create  This is a change via Nuxt Studio.a blog
 
 Open a terminal an run the following command:
 
